tests/ucc/type/good/fun-fwd-decl-2.c
int f();

int f(int a)
{
    return 0;
}
