tests/ucc/type/bad/conflict-fun-type-3.c
int f(int b, char c);

int f(int a, int c)
{
    return 0;
}
